--- a/project/public/upload.html
+++ b/project/public/upload.html
@@ -201,7 +201,7 @@
                     </div>
                 </div>
                 <!-- <canvas class="my-4 chartjs-render-monitor" id="myChart" width="1326" height="558" style="display: block; height: 279px; width: 663px;"></canvas> -->
-                <img id="img" src="http://localhost:3000/logo-1547105862659.png" alt="上传图片" style="border:1px solid #ccc;display: block" width="200" height="200"/>
+                <img id="img" src="http://132.232.131.67:3000/logo-1547105862659.png" alt="上传图片" style="border:1px solid #ccc;display: block" width="200" height="200"/>
                 <br>
                 <input type="file" id="file" name="logo" /> 
             </main>
